# cuda_ANN

./: Makefile  README.md  brute.cu  study.txt  tmp.cu
gpu_ann_ivf/: CMakeLists.txt
gpu_ann_ivf/src/: main.cu
